z-index fix

--- a/fk-testimonial/src/components/AudioRecorder/style.css
+++ b/fk-testimonial/src/components/AudioRecorder/style.css
@@ -1,5 +1,5 @@
 .recorder-container {
-  z-index: 1;
+  z-index: 10;
 }
 
 .recorder-container .recording-button {
